--- a/environment.yml
+++ b/environment.yml
@@ -72,6 +72,7 @@ dependencies:
     - cython==0.28.3
     - decorator==4.3.0
     - dill==0.2.8.2
+    - entrypoints==0.2.3
     - future==0.16.0
     - gast==0.2.0
     - glfw==1.6.0
@@ -79,14 +80,26 @@ dependencies:
     - gym==0.10.5
     - html5lib==0.9999999
     - imageio==2.3.0
+    - ipykernel==4.8.2
     - ipython==6.4.0
     - ipython-genutils==0.2.0
+    - ipywidgets==7.2.1
     - jedi==0.12.0
     - joblib==0.12.0
+    - jsonschema==2.6.0
+    - jupyter==1.0.0
+    - jupyter-client==5.2.3
+    - jupyter-console==5.2.0
+    - jupyter-core==4.4.0
     - markdown==2.6.11
+    - mistune==0.8.3
     - mpi4py==3.0.0
     - mujoco-py==1.50.1.56
+    - nbconvert==5.3.1
+    - nbformat==4.4.0
+    - notebook==5.5.0
     - opencv-python==3.4.1.15
+    - pandocfilters==1.4.2
     - parso==0.2.1
     - pexpect==4.6.0
     - pickleshare==0.7.4
@@ -99,15 +112,21 @@ dependencies:
     - pyopengl==3.1.0
     - python-utils==2.3.0
     - pyzmq==17.0.0
+    - qtconsole==4.3.1
+    - send2trash==1.5.0
     - simplegeneric==0.8.1
     - tensorboard==1.8.0
     - tensorflow==1.8.0
     - termcolor==1.1.0
+    - terminado==0.8.1
+    - testpath==0.3.1
     - torch==0.4.0
+    - tornado==5.0.2
     - tqdm==4.23.4
     - traitlets==4.3.2
     - wcwidth==0.1.7
     - werkzeug==0.14.1
+    - widgetsnbextension==3.2.1
     - zmq==0.0.0
 prefix: /home/aaron/anaconda3/envs/atari-irl
 
