--- a/environment.yml
+++ b/environment.yml
@@ -3,134 +3,78 @@ channels:
   - pytorch
   - defaults
 dependencies:
-  - alabaster=0.7.11=py36_0
-  - asn1crypto=0.24.0=py36_0
-  - babel=2.6.0=py36_0
+  - alabaster=0.7.11=py35_0
+  - asn1crypto=0.24.0=py35_0
+  - babel=2.6.0=py35_0
   - ca-certificates=2018.03.07=0
-  - certifi=2018.4.16=py36_0
-  - cffi=1.11.5=py36h9745a5d_0
-  - chardet=3.0.4=py36h0f667ec_1
-  - cryptography=2.2.2=py36h14c3975_0
+  - certifi=2018.4.16=py35_0
+  - cffi=1.11.5=py35h9745a5d_0
+  - chardet=3.0.4=py35hb6e9ddf_1
+  - cryptography=2.2.2=py35h14c3975_0
   - cudatoolkit=9.0=h13b8566_0
   - cudnn=7.1.2=cuda9.0_0
-  - docutils=0.14=py36hb0f60f5_0
-  - idna=2.7=py36_0
-  - imagesize=1.0.0=py36_0
+  - cython=0.28.1=py35h14c3975_0
+  - docutils=0.14=py35hd11081d_0
+  - idna=2.7=py35_0
+  - imagesize=1.0.0=py35_0
   - intel-openmp=2018.0.3=0
-  - jinja2=2.10=py36ha16c418_0
+  - jinja2=2.10=py35h480ab6d_0
   - libedit=3.1.20170329=h6b74fdf_2
   - libffi=3.2.1=hd88cf55_4
   - libgcc-ng=7.2.0=hdf63c60_3
   - libgfortran-ng=7.2.0=hdf63c60_3
   - libstdcxx-ng=7.2.0=hdf63c60_3
-  - markupsafe=1.0=py36hd9260cd_1
+  - markupsafe=1.0=py35h4f4fcf6_1
   - mkl=2018.0.3=1
-  - mkl_fft=1.0.1=py36h3010b51_0
-  - mkl_random=1.0.1=py36h629b387_0
+  - mkl_fft=1.0.1=py35h3010b51_0
+  - mkl_random=1.0.1=py35h629b387_0
+  - nccl=1.3.5=cuda9.0_0
   - ncurses=6.1=hf484d3e_0
-  - ninja=1.8.2=py36h6bb024c_1
-  - numpy=1.14.2=py36hdbf6ddf_1
-  - numpydoc=0.8.0=py36_0
+  - ninja=1.8.2=py35h6bb024c_1
+  - numpy=1.14.2=py35hdbf6ddf_1
+  - numpydoc=0.8.0=py35_0
   - openssl=1.0.2o=h20670df_0
-  - packaging=17.1=py36_0
-  - pandas=0.23.0=py36h637b7d7_0
-  - pip=10.0.1=py36_0
-  - pycparser=2.18=py36hf9f622e_1
-  - pygments=2.2.0=py36h0d3125c_0
-  - pyopenssl=18.0.0=py36_0
-  - pyparsing=2.2.0=py36hee85983_1
-  - pysocks=1.6.8=py36_0
-  - python=3.6.5=hc3d631a_2
-  - python-dateutil=2.7.3=py36_0
-  - pytz=2018.4=py36_0
+  - packaging=17.1=py35_0
+  - pandas=0.23.0=py35h637b7d7_0
+  - pip=10.0.1=py35_0
+  - pycparser=2.18=py35h61b3040_1
+  - pygments=2.2.0=py35h0f41973_0
+  - pyopenssl=18.0.0=py35_0
+  - pyparsing=2.2.0=py35h041ed72_1
+  - pysocks=1.6.8=py35_0
+  - python=3.5.5=hc3d631a_4
+  - python-dateutil=2.7.3=py35_0
+  - pytorch=0.4.0=py35hdf912b8_0
+  - pytz=2018.4=py35_0
   - readline=7.0=ha6073c6_4
-  - requests=2.19.1=py36_0
-  - scipy=1.1.0=py36hfc37229_0
-  - setuptools=39.2.0=py36_0
-  - six=1.11.0=py36h372c433_1
-  - snowballstemmer=1.2.1=py36h6febd40_0
-  - sphinx=1.7.5=py36_0
-  - sphinxcontrib=1.0=py36h6d0f590_1
-  - sphinxcontrib-websupport=1.1.0=py36_1
+  - requests=2.19.1=py35_0
+  - scipy=1.1.0=py35hfc37229_0
+  - setuptools=39.2.0=py35_0
+  - six=1.11.0=py35h423b573_1
+  - snowballstemmer=1.2.1=py35h5435977_0
+  - sphinx=1.7.5=py35_0
+  - sphinxcontrib=1.0=py35hcb7efd2_1
+  - sphinxcontrib-websupport=1.1.0=py35_1
   - sqlite=3.24.0=h84994c4_0
   - tk=8.6.7=hc745277_3
-  - urllib3=1.23=py36_0
-  - wheel=0.31.1=py36_0
+  - urllib3=1.23=py35_0
+  - wheel=0.31.1=py35_0
   - xz=5.2.4=h14c3975_4
   - zlib=1.2.11=ha838bed_2
   - cuda90=1.0=h6433d27_0
-  - pytorch=0.4.0=py36_cuda9.0.176_cudnn7.1.2_1
   - pip:
     - absl-py==0.2.2
     - astor==0.6.2
-    - atari-py==0.1.1
-    - backcall==0.1.0
-    - baselines==0.1.5
     - bleach==1.5.0
-    - click==6.7
-    - cloudpickle==0.5.3
-    - cycler==0.10.0
-    - cython==0.28.3
-    - decorator==4.3.0
-    - dill==0.2.8.2
-    - entrypoints==0.2.3
-    - future==0.16.0
     - gast==0.2.0
-    - glfw==1.6.0
     - grpcio==1.12.1
-    - gym==0.10.5
     - html5lib==0.9999999
-    - imageio==2.3.0
-    - ipykernel==4.8.2
-    - ipython==6.4.0
-    - ipython-genutils==0.2.0
-    - ipywidgets==7.2.1
-    - jedi==0.12.0
-    - joblib==0.12.0
-    - jsonschema==2.6.0
-    - jupyter==1.0.0
-    - jupyter-client==5.2.3
-    - jupyter-console==5.2.0
-    - jupyter-core==4.4.0
-    - kiwisolver==1.0.1
     - markdown==2.6.11
-    - matplotlib==2.2.2
-    - mistune==0.8.3
-    - mpi4py==3.0.0
-    - mujoco-py==1.50.1.56
-    - nbconvert==5.3.1
-    - nbformat==4.4.0
-    - notebook==5.5.0
-    - opencv-python==3.4.1.15
-    - pandocfilters==1.4.2
-    - parso==0.2.1
-    - pexpect==4.6.0
-    - pickleshare==0.7.4
-    - pillow==5.1.0
-    - progressbar2==3.38.0
-    - prompt-toolkit==1.0.15
     - protobuf==3.6.0
-    - ptyprocess==0.6.0
-    - pyglet==1.3.2
-    - pyopengl==3.1.0
-    - python-utils==2.3.0
-    - pyzmq==17.0.0
-    - qtconsole==4.3.1
-    - seaborn==0.8.1
-    - send2trash==1.5.0
-    - simplegeneric==0.8.1
     - tensorboard==1.8.0
-    - tensorflow==1.8.0
+    - tensorflow-gpu==1.8.0
     - termcolor==1.1.0
-    - terminado==0.8.1
-    - testpath==0.3.1
     - torch==0.4.0
-    - tornado==5.0.2
-    - tqdm==4.23.4
-    - traitlets==4.3.2
-    - wcwidth==0.1.7
     - werkzeug==0.14.1
-    - widgetsnbextension==3.2.1
-    - zmq==0.0.0
 prefix: /home/aaron/anaconda3/envs/atari-irl
 
