--- a/environment.yml
+++ b/environment.yml
@@ -79,9 +79,9 @@ dependencies:
   - pytorch=0.4.0=py36_cuda9.0.176_cudnn7.1.2_1
   - pip:
     - absl-py==0.2.2
-    - adversarial-irl==0.1
+#   - adversarial-irl==0.1
     - astor==0.6.2
-    - atari-irl==0.1
+#   - atari-irl==0.1
     - atari-py==0.1.1
     - backcall==0.1.0
     - baselines==0.1.5
@@ -143,7 +143,7 @@ dependencies:
     - pyzmq==17.0.0
     - qtconsole==4.3.1
     - redis==2.10.6
-    - rllab==0.1.0
+#   - rllab==0.1.0
     - seaborn==0.8.1
     - send2trash==1.5.0
     - simplegeneric==0.8.1
